--- a/TrabajoFinal/ml/templates/stockCategoria.html
+++ b/TrabajoFinal/ml/templates/stockCategoria.html
@@ -1,4 +1,5 @@
 <!-- Trabajo Final -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,38 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href='{% static "css/style.css" %}'>
     <title>Clasificador</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .sidebar {
-            height: 100vh;
-            position: fixed;
-            background-color: #f8f9fa; 
-            border-radius: 8px; 
-            padding: 10px 0; 
-        }
-        .main-content {
-            margin-left: 250px;
-        }
-        .nav-link {
-            padding: 12px 20px; 
-            font-size: 1rem;  
-            transition: background-color 0.2s, color 0.2s; 
-            margin: 5px 0; 
-            border-radius: 5px; 
-        }
-        .nav-link:hover {
-            background-color: #cfe2ff; 
-            color: #0056b3;
-        }
-        .nav-link.active {
-            background-color: #0d6efd; 
-            color: white; 
-            border-radius: 5px; 
-        }
-    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -82,6 +53,7 @@
                         <button class="btn btn-primary">Agregar Datos</button>
                     </div> -->
                 </div>
+                <img src='{%static "img/stock_actual_por_categoria.png"%}' alt="">
 
 
                 <!-- <div class="row">
