pendiente de los modelos de regresion

--- a/TrabajoFinal/ml/templates/modeloGananciaCategoria.html
+++ b/TrabajoFinal/ml/templates/modeloGananciaCategoria.html
@@ -54,6 +54,8 @@
                     </div> -->
                 </div>
                 {% load static %}
+                <p>Intersección: 725.6853968253969</p>
+                <p>Pendiente: [92.42912611]</p>
                 <img src='{%static "img/GananciaTotalVsCategoria.png"%}' alt="">
 
                 <!-- <div class="row">
