--- a/TrabajoFinal/ml/templates/modeloPrecioCategoria.html
+++ b/TrabajoFinal/ml/templates/modeloPrecioCategoria.html
@@ -53,6 +53,8 @@
                         <button class="btn btn-primary">Agregar Datos</button>
                     </div> -->
                 </div>
+                <p>Intersección: 239.46945848187966</p>
+                <p>Pendiente: [167.54812485]</p>
                 <img src='{%static "img/PreciovsCategoria.png"%}' alt="">
 
                 <!-- <div class="row">
