--- a/TrabajoFinal/ml/templates/clasificador.html
+++ b/TrabajoFinal/ml/templates/clasificador.html
@@ -66,12 +66,8 @@
                                 <option value="">Selecciona una marca</option>ls
 
                                 <option value="NAC">Nacional</option>
-                                <option value="IMP">importado</option>
+                                <option value="IMP">Importado</option>
                             </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="modelo" class="form-label">Modelo</label>
-                            <input type="text" class="form-control" id="modelo" name="modelo" placeholder="GOURMET" required>
                         </div>
                         <div class="mb-3">
                             <button type="submit" class="btn btn-success" style="width: 100%">Enviar</button>
