--- a/TrabajoFinal/ml/templates/index.html
+++ b/TrabajoFinal/ml/templates/index.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/2.1.8/js/dataTables.bootstrap5.js"></script>
-    <title>Clasificador</title>
+    <title>Home</title>
 </head>    
 <body>
     <div class="container-fluid">
