--- a/TrabajoFinal/ml/templates/resultadoClasificador.html
+++ b/TrabajoFinal/ml/templates/resultadoClasificador.html
@@ -1,30 +1,71 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href='{% static "css/style.css" %}'>
+    <title>Resultados del Clasificador</title>
 </head>
-<body>
-    <div>
-        {% if response %}
-            <h1>Datos recibidos:</h1>
-            <ul>
-                <li><strong>Dinero Disponible:</strong> {{ response.dinero_disponible }}</li>
-                <li><strong>Marca:</strong> {{ response.marca }}</li>
-                <li><strong>Modelo:</strong> {{ response.modelo }}</li>
-            </ul>
-        {% endif %}
-    </div>
-    
-    {% if error %}
-        <p style="color: red;">{{ error }}</p>
-    {% endif %}
+<div class="container-fluid">
+    <div class="row">
+        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar">
+            <div class="position-sticky">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">
+                            <i class="bi bi-house-door"></i>Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/clasificador">
+                            <i class="bi bi-grid"></i> Clasificador
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/modeloPrecioCategoria">
+                            <i class="bi bi-graph-up"></i> Modelo de Regresión: Precio vs Categoría
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/modeloGananciaCategoria">
+                            <i class="bi bi-graph-up"></i> Modelo de Regresión: Ganancia Total
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/stockCategoria">
+                            <i class="bi bi-bar-chart-steps"></i>  Stock por Categoría
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-    {{response}}
-    {%if response%}
-        <h1>La respues es {{response}}</h1>
-    {%endif%}
-    
-</body>
+        <main class="main-content col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2">Resultados del Clasificador</h1>
+            </div>
+            <div>
+                {% if response %}
+                    <div style="display: flex;gap: 10px;align-items: baseline;">
+                        <h4>Categoría Predicha:</h4>
+                        <h6>{{ response }}</h6> <!-- Muestra la predicción -->
+                    </div>
+                    
+                {% endif %}
+            </div>
+            {% if error %}
+                <p style="color: red;">{{ error }}</p>
+            {% endif %}
+            {% if grafico %}
+                <h4>Gráfico de Resultados:</h4>
+                <img src='{% static "images/grafico.png" %}' alt="Gráfico de Resultados" style="width: 100%; height: 70%;">
+            {% endif %}
+          
+        </main>
+    </div>
+</div>
 </html>
